--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
-baseurl: "/portfolio"
 title: Sampo Sihvola
 logo: /assets/img/logo.jpg
 description: moi
 show_downloads: false
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme
+theme: jekyll-theme-minimal
