--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sampo Sihvola
-logo: /assets/img/logo.jpg
+logo: /assets/img/profiili.png
 description: moi
 show_downloads: false
 theme: jekyll-theme-minimal
