--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Sampo Sihvola
 logo: /assets/img/profiili.png
 # description: 
 show_downloads: false
-remote-theme: jekyll-theme-atlas
+remote-theme: jekyll-theme-hamilton
