--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sampo Sihvola
 logo: /assets/img/profiili.png
-# description: 
+description: Second-year IT student at Laurea University of Applied Sciences. Past work experience mainly from cultural & restaurant industries. Now looking for work in software testing & QA.
 show_downloads: false
 theme: jekyll-theme-minimal
